--- a/pictureSNS/TableViewShowPictureCell.xib
+++ b/pictureSNS/TableViewShowPictureCell.xib
@@ -1,76 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="74" id="R1D-aY-sPL" customClass="TableViewShowPictureCell" customModule="pictureSNS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="250"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="R1D-aY-sPL" id="PyC-iL-GVb">
-                <rect key="frame" x="0.0" y="0.0" width="150" height="249"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="599"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JgB-k0-jZM">
-                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="Ncz-F7-bbf"/>
-                            <constraint firstAttribute="width" constant="30" id="pJF-pV-IVr"/>
-                        </constraints>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="13920977_1763280383887223_4110317283674676073_n.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="JgB-k0-jZM">
+                        <rect key="frame" x="20" y="20" width="30" height="30"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zwc-vP-lh8">
-                        <rect key="frame" x="30" y="0.0" width="120" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="リッキー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zwc-vP-lh8">
+                        <rect key="frame" x="70" y="20" width="120" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="120" id="8zJ-LG-tbD"/>
-                            <constraint firstAttribute="height" constant="30" id="DU8-eJ-6LN"/>
+                            <constraint firstAttribute="width" constant="120" id="QxT-yZ-eUu"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2vr-Dg-LWh">
-                        <rect key="frame" x="0.0" y="30" width="150" height="150"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="150" id="9JE-Yi-skr"/>
-                            <constraint firstAttribute="height" constant="150" id="Jdg-aV-dPi"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKo-7k-Rj9">
-                        <rect key="frame" x="0.0" y="180" width="150" height="70"/>
+                        <rect key="frame" x="0.0" y="529" width="300" height="70"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="70" id="eFl-h8-819"/>
-                            <constraint firstAttribute="width" constant="150" id="fy6-Sk-XkO"/>
+                            <constraint firstAttribute="height" constant="70" id="7Oj-UH-1fM"/>
+                            <constraint firstAttribute="width" constant="300" id="qYT-lC-SuH"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="paU-DM-GPt">
+                        <rect key="frame" x="20" y="491" width="50" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="Pnu-cY-C2d"/>
+                        </constraints>
+                        <state key="normal" title="いいね"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AoF-Ed-Bhu">
+                        <rect key="frame" x="95" y="491" width="70" height="30"/>
+                        <state key="normal" title="コメント"/>
+                    </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2vr-Dg-LWh">
+                        <rect key="frame" x="0.0" y="58" width="400" height="414"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="414" id="VJc-yy-qb6"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="2vr-Dg-LWh" firstAttribute="top" secondItem="Zwc-vP-lh8" secondAttribute="bottom" id="3Do-RM-f4n"/>
-                    <constraint firstItem="gKo-7k-Rj9" firstAttribute="leading" secondItem="PyC-iL-GVb" secondAttribute="leading" id="K1o-68-UJc"/>
-                    <constraint firstItem="Zwc-vP-lh8" firstAttribute="top" secondItem="PyC-iL-GVb" secondAttribute="top" id="OWY-Fu-70A"/>
-                    <constraint firstItem="JgB-k0-jZM" firstAttribute="leading" secondItem="PyC-iL-GVb" secondAttribute="leading" id="V5u-sl-inw"/>
-                    <constraint firstItem="2vr-Dg-LWh" firstAttribute="leading" secondItem="PyC-iL-GVb" secondAttribute="leading" id="Vwl-2L-1gl"/>
-                    <constraint firstItem="Zwc-vP-lh8" firstAttribute="leading" secondItem="JgB-k0-jZM" secondAttribute="trailing" id="k3Q-lv-JhW"/>
-                    <constraint firstItem="gKo-7k-Rj9" firstAttribute="top" secondItem="2vr-Dg-LWh" secondAttribute="bottom" id="nIG-ZE-0jf"/>
-                    <constraint firstItem="JgB-k0-jZM" firstAttribute="top" secondItem="PyC-iL-GVb" secondAttribute="top" id="wfX-p6-xC9"/>
+                    <constraint firstItem="paU-DM-GPt" firstAttribute="leading" secondItem="JgB-k0-jZM" secondAttribute="leading" id="0EW-Dq-v2H"/>
+                    <constraint firstItem="2vr-Dg-LWh" firstAttribute="top" secondItem="PyC-iL-GVb" secondAttribute="top" constant="58" id="6M8-qL-ZXY"/>
+                    <constraint firstItem="Zwc-vP-lh8" firstAttribute="top" secondItem="PyC-iL-GVb" secondAttribute="topMargin" constant="12" id="9bU-3a-vIH"/>
+                    <constraint firstItem="2vr-Dg-LWh" firstAttribute="leading" secondItem="PyC-iL-GVb" secondAttribute="leading" id="AQr-bj-LIs"/>
+                    <constraint firstItem="Zwc-vP-lh8" firstAttribute="leading" secondItem="PyC-iL-GVb" secondAttribute="leading" constant="70" id="CeU-cf-OjW"/>
+                    <constraint firstItem="gKo-7k-Rj9" firstAttribute="top" secondItem="paU-DM-GPt" secondAttribute="bottom" constant="8" symbolic="YES" id="DJt-WT-otr"/>
+                    <constraint firstItem="AoF-Ed-Bhu" firstAttribute="top" secondItem="2vr-Dg-LWh" secondAttribute="bottom" constant="19" id="GQ7-AJ-JPj"/>
+                    <constraint firstItem="Zwc-vP-lh8" firstAttribute="centerX" secondItem="AoF-Ed-Bhu" secondAttribute="centerX" id="LQA-qw-1E4"/>
+                    <constraint firstItem="gKo-7k-Rj9" firstAttribute="top" secondItem="AoF-Ed-Bhu" secondAttribute="bottom" constant="8" symbolic="YES" id="P7C-br-F2b"/>
+                    <constraint firstItem="2vr-Dg-LWh" firstAttribute="leading" secondItem="gKo-7k-Rj9" secondAttribute="leading" id="Rjv-sU-5LO"/>
+                    <constraint firstItem="AoF-Ed-Bhu" firstAttribute="leading" secondItem="paU-DM-GPt" secondAttribute="trailing" constant="25" id="TyH-co-QyN"/>
+                    <constraint firstItem="Zwc-vP-lh8" firstAttribute="top" secondItem="JgB-k0-jZM" secondAttribute="top" id="ZzM-GC-nGc"/>
+                    <constraint firstItem="2vr-Dg-LWh" firstAttribute="top" secondItem="Zwc-vP-lh8" secondAttribute="bottom" constant="8" symbolic="YES" id="bnV-rX-1Pq"/>
+                    <constraint firstItem="Zwc-vP-lh8" firstAttribute="leading" secondItem="JgB-k0-jZM" secondAttribute="trailing" constant="20" id="e2Z-vy-WkI"/>
+                    <constraint firstAttribute="trailing" secondItem="2vr-Dg-LWh" secondAttribute="trailing" id="i7m-04-xvz"/>
+                    <constraint firstItem="2vr-Dg-LWh" firstAttribute="top" secondItem="JgB-k0-jZM" secondAttribute="bottom" constant="8" symbolic="YES" id="v7T-9b-FDj"/>
+                    <constraint firstItem="paU-DM-GPt" firstAttribute="leading" secondItem="PyC-iL-GVb" secondAttribute="leadingMargin" constant="12" id="x4u-u1-5e0"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="1" green="0.46341787096507858" blue="0.70129218006764482" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
                 <outlet property="ImageView" destination="2vr-Dg-LWh" id="Vg8-Aa-6Gd"/>
                 <outlet property="UserIcon" destination="JgB-k0-jZM" id="jvZ-pB-3DP"/>
                 <outlet property="UserName" destination="Zwc-vP-lh8" id="U3q-m8-o95"/>
                 <outlet property="comment" destination="gKo-7k-Rj9" id="12b-QL-ip8"/>
             </connections>
-            <point key="canvasLocation" x="-28.5" y="1"/>
+            <point key="canvasLocation" x="-29" y="1"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="13920977_1763280383887223_4110317283674676073_n.jpg" width="400" height="400"/>
+    </resources>
 </document>
